--- a/veil-of-the-self.html
+++ b/veil-of-the-self.html
@@ -3,8 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>Veil of the Self by Ronak Bahador (2023)</title>
+
+    <!-- Essential Meta Tags for SEO and Sharing -->
+    <meta name="description" content="A profile of 'Veil of the Self', an abstract minimalism painting by Ronak Bahador, exploring themes of identity and perception.">
+    <meta name="keywords" content="Ronak Bahador, Veil of the Self, Abstract Minimalism, Modern Art, Painting, Identity, Art Profile">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Open Graph Meta Tags for Social Media Sharing -->
+    <meta property="og:title" content="Veil of the Self by Ronak Bahador (2023)">
+    <meta property="og:type" content="article">
+    <meta property="og:image" content="veil-of-the-self.jpg">
+    <meta property="og:url" content="https://baab.studio/veil-of-the-self.html">
+    <meta property="og:description" content="Explore 'Veil of the Self' by Ronak Bahador, a modern abstract piece balancing the human form with elements of abstraction.">
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Veil of the Self by Ronak Bahador (2023)">
+    <meta name="twitter:description" content="Discover the themes of identity and perception in Ronak Bahador's 'Veil of the Self'.">
+    <meta name="twitter:image" content="veil-of-the-self.jpg">
+
     <!-- Include Google Font 'Lato' for a minimalist and modern aesthetic -->
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap" rel="stylesheet">
+
     <style>
         body {
             font-family: 'Lato', sans-serif;
@@ -61,7 +81,6 @@
             <li><strong>Title</strong>: Veil of the Self</li>
             <li><strong>Year</strong>: 2023</li>
             <li><strong>Medium</strong>: Acrylic on Canvas</li>
-            <!-- <li><strong>Dimensions</strong>: (Insert dimensions, if applicable)</li> -->
             <li><strong>Style</strong>: Abstract Minimalism</li>
             <li><strong>Themes</strong>: Identity, Perception, Mystery, Human Form</li>
         </ul>
